<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.DetectArucoActivity">

    <com.softbankrobotics.app.ui.TutorialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.softbankrobotics.app.ui.ConversationView
            style="@style/RecyclerView"
            android:id="@+id/conversationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/imageLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintVertical_weight="1"/>

    <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/imageLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/conversationView"
            app:layout_constraintBottom_toBottomOf="@id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintVertical_weight="2"
            android:orientation="horizontal">
        <ImageView
                android:contentDescription="@string/camera_image"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:id="@+id/cameraImage"
                android:layout_width="100dp"
                android:layout_height="match_parent"/>
        <TextView
                android:layout_marginStart="20dp"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:id="@+id/markerInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />
    </LinearLayout>


    <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/imageLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

        <FrameLayout
                android:layout_weight="1"
                android:id="@+id/frameSide"
                android:background="@android:color/holo_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">
            <TextView
                    android:layout_gravity="top"
                    android:id="@+id/rightSideText"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/from_right_side_of_pepper">
            </TextView>
            <com.softbankrobotics.app.ui.FrameView
                    app:viewType="RIGHT"
                    android:layout_gravity="bottom"
                    android:id="@+id/frameViewSide"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>
        </FrameLayout>
        <FrameLayout
                android:layout_weight="1"
                android:id="@+id/frameTop"
                android:background="@android:color/holo_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">
            <TextView
                    android:layout_gravity="top"
                    android:id="@+id/topSideText"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/from_top_of_pepper">
            </TextView>
            <com.softbankrobotics.app.ui.FrameView
                    app:viewType="TOP"
                    android:layout_gravity="bottom"
                    android:id="@+id/frameViewTop"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>
        </FrameLayout>
        <FrameLayout
                android:layout_weight="1"
                android:id="@+id/frameBack"
                android:background="@android:color/holo_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">
            <TextView
                    android:layout_gravity="top"
                    android:id="@+id/backSideText"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/from_back_of_pepper">
            </TextView>
            <com.softbankrobotics.app.ui.FrameView
                    app:viewType="BACK"
                    android:layout_gravity="bottom"
                    android:id="@+id/frameViewBack"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"/>
        </FrameLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>